[add] デバッグ用 docker-compose (mysql, phpmyadmin)

--- a/src/setting.ini
+++ b/src/setting.ini
@@ -1,9 +1,9 @@
 [DATABASE]
-hostname = 192.168.1.3
+hostname = localhost
 port = 3306
-username = possys_logic
-password = pospos
-databaseName = possys
+username = user
+password = password
+databaseName = db
 
 [SLACK]
 url = https://hooks.slack.com/services/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
